feat: BRRRR Loans rebrand, dark mode, logo + highlights

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vyral PEO Form</title>
+    <title>BRRRR Loans Form</title>
   </head>
-  <body class="text-foreground bg-background">
+  <body class="dark text-foreground bg-background">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
